[package]
name = "client"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
reqwest = { version = "0.11.24", features = ["json"] }
tokio.workspace = true
measure = { path = "../service" }
serde_json = "1.0.113"
anyhow = "1.0.79"
futures = "0.3.30"
serde.workspace = true
tabled = "0.15.0"
chrono = "0.4.34"
indicatif = "0.17.8"
