[package]
name = "measure"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "measure"
path = "src/main.rs"

[lib]
name = "measure"
path = "src/types.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
thiserror = "1.0.57"
ttfb = "1.10.0"
tokio.workspace = true
serde.workspace = true